refactor: simplify Ticket module with consistent naming and structure